update voor de les

--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
 		<section>
 			<ul>
 				<li>
-					Merchandise
+					<a href="#">Merchandise</a>
 				</li>
 				<li>
-					News
+					<a href="#">News</a>
 				</li>
 				<li>
-					About
+					<a href="#">About</a>
 				</li>
+				<!-- hoe maak ik hier een dropdown van?-->
 			</ul>
 		</section>
 	</nav>
