--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 				<h2>Welcome to Neopets!</h2>
 				<p>Greetings, Neopians, and welcome to Neopets, the original online virtual pet community! Check out all the awesome features that Neopia has to offer!</p>
 				<a href="#">See More</a>
+				<img src="images/right-image-1.png" alt="Collection of four images next to each other. They're illustrations of different neopets. It has the Neopets logo under it.">
 			</li>
 			<li>
 				
@@ -86,6 +87,7 @@
 	<section>
 		<h2>Latest Events</h2>
 		<p>Immerse yourself in the enchanting world of Neopia with our latest events and thrilling activities, ensuring you never miss a moment of the Neopian fun!</p>
+
 		<button></button>
 		<ul>
 			<li>
