--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
           the Neopian fun!
         </p>
 
-        <button></button>
+        <button>
+          <img src="images/arrow_left_purple.svg" alt="Button to left" />
+        </button>
 
         <ul>
           <li>
@@ -155,7 +157,9 @@
           </li>
         </ul>
 
-        <button></button>
+        <button>
+          <img src="images/arrow_right_purple.svg" alt="Button to right" />
+        </button>
       </section>
       <section>
         <img src="placeholder" alt="" />
