Update voor help
:)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#">Play Neopets</a>
           </li>
           <li>
-            <a href="#">Faerie's Hope</a>
+            <a href="faerieshope.html">Faerie's Hope</a>
           </li>
           <li>
             <a href="#">Island Builders</a>
@@ -148,10 +148,10 @@
 
       <section>
         <section>
-          <img
-            src="images/bg-cloud-3.svg"
+          <!-- <img
+            src="images/wolk_2.png"
             alt="a strip of yellow clouds, moving to the left."
-          />
+          /> -->
         </section>
 
         <h2>Latest Events</h2>
@@ -180,10 +180,16 @@
             </li>
           </ul>
 
-          <button aria-label="To the left side of the element">
+          <button
+            data-direction="previous"
+            aria-label="To the left side of the element"
+          >
             <img src="images/arrow_left_purple.svg" alt="Button to left" />
           </button>
-          <button aria-label="To the right side of the element">
+          <button
+            data-direction="next"
+            aria-label="To the right side of the element"
+          >
             <img src="images/arrow_right_purple.svg" alt="Button to right" />
           </button>
         </section>
