Herkansing files - deel 1
:) 

thanks!

--- a/faerieshope.html
+++ b/faerieshope.html
@@ -20,19 +20,15 @@
       <section>
         <a href="#"
           ><img
-            type="image/svg+xml"
             src="images/faerieshope_logo_large.png"
             alt="Faerie's Hope logo"
         /></a>
       </section>
 
       <nav>
-        <h2 class="visually-hidden">Navigation</h2>
+        <h2>Follow Us</h2>
         <!--- class is voor ontzichtbaar maar niet voor de screenreader!-->
         <ul>
-          <li>
-            <h2>Follow Us</h2>
-          </li>
           <li>
             <a href="#"
               ><img src="images/faerieshope-facebook-f.png" alt="Facebook Icon"
@@ -60,7 +56,7 @@
       <section>
         <img
           src="images/faerieshope_logo_large.png"
-          alt="FNeopets Faerie's hope Logo."
+          alt="Neopets Faerie's hope Logo."
         />
         <h2>Available Now!</h2>
         <section>
@@ -150,21 +146,16 @@
           So, what are you waiting for? Start your adventure in New Faerieland
           today!
         </h2>
-        <!--- credit/source over het embedden van Youtube Edits: https://www.200ok.nl/tips/youtube-embed/ -->
-
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube-nocookie.com/embed/wId-3SmWxag?si=71yz6ihwH_bO_QkV"
-          title="A trailer showing the gameplay of Faerie's hope. Yuo can see the different bright worlds and levels. You can also customize your characters look."
-          frameborder="0"
-          controls="1"
-          autoplay="0"
-          fs="1"
-          modestbranding="0"
-          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
+        <section>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube-nocookie.com/embed/wId-3SmWxag?si=71yz6ihwH_bO_QkV"
+            title="A trailer showing the gameplay of Faerie's hope. Yuo can see the different bright worlds and levels. You can also customize your characters look."
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </section>
       </section>
 
       <section>
