--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
 
     <header>
       <section>
-        <a href="#"
-          ><img type="image/svg+xml" src="images/logo.svg" alt="Neopets logo"
-        /></a>
-        <button>
+        <a href="#"><img src="images/logo.svg" alt="Neopets logo" /></a>
+        <button aria-label="Open Nav">
           <!-- spans voor het hamburger menu-->
           <span></span>
           <span></span>
@@ -111,7 +109,10 @@
             />
           </li>
           <li>
-            <img src="images/left-logo-4.png" alt="" />
+            <img
+              src="images/left-logo-4.png"
+              alt="Neopets Faeries' Hope Logo"
+            />
             <h2>Available on</h2>
             <section>
               <img
@@ -120,11 +121,17 @@
               />
               <img src="images/googleplay.png" alt="Get it on google play" />
             </section>
-            <img src="images/right-image-4.png" alt="" />
+            <img
+              src="images/right-image-4.png"
+              alt="Three sparkly faeries looking at the viewer."
+            />
           </li>
 
           <li>
-            <img src="images/left-logo-3.png" alt="" />
+            <img
+              src="images/left-logo-3.png"
+              alt="Neopets Island Builders Logo"
+            />
             <h2>Available on</h2>
             <section>
               <img
@@ -133,27 +140,24 @@
               />
               <img src="images/googleplay.png" alt="Get it on google play" />
             </section>
-            <img src="images/right-image-3.png" alt="" />
+            <img
+              src="images/right-image-3.png"
+              alt="4 Neopets and a toyr crab hanging out. They're cartoon 3d renders."
+            />
           </li>
 
           <li>
-            <img src="images/won_logo.png" alt="" />
+            <img src="images/won_logo.png" alt="World of Neopets Logo" />
             <h2>Play Now</h2>
-            <img src="images/right-image-5.png" alt="" />
+            <img
+              src="images/right-image-5.png"
+              alt="3d Render of different neopets happily standing around and looking directly at the viewer."
+            />
           </li>
-
-          <section></section>
         </ul>
       </section>
 
       <section>
-        <section>
-          <!-- <img
-            src="images/wolk_2.png"
-            alt="a strip of yellow clouds, moving to the left."
-          /> -->
-        </section>
-
         <h2>Latest Events</h2>
         <p>
           Immerse yourself in the enchanting world of Neopia with our latest
@@ -165,17 +169,24 @@
           <ul>
             <li id="element1">
               <a href="#"
-                ><img src="images/exclusive_hood_giveaway.jpeg" alt=""
+                ><img
+                  src="images/exclusive_hood_giveaway.jpeg"
+                  alt="A banner for an Exclusive Neopets hood giveawat. It's to celebrate a new era of Neopets."
               /></a>
             </li>
             <li id="element2">
               <a href="#"
-                ><img src="/images/sdcc_banner_546b488fec.png" alt=""
+                ><img
+                  src="/images/sdcc_banner_546b488fec.png"
+                  alt="A futuristic banner of an Aisha dressed in space gear. It says Neopets SDCC 2023, A new Era begins"
               /></a>
             </li>
             <li id="element3">
               <a href="#"
-                ><img src="/images/fallrenaissance_2_3bdbbe2e30.png" alt=""
+                ><img
+                  src="/images/fallrenaissance_2_3bdbbe2e30.png"
+                  alt="Banner with text. Takes center stage at conventions across the globe this october
+                Featuring onsite appearances at New york comic con, retrogamecon, & gamescom asia"
               /></a>
             </li>
           </ul>
@@ -196,7 +207,6 @@
       </section>
 
       <section>
-        <img src="placeholder" alt="" />
         <h2>Top News</h2>
         <p>
           Stay informed and up-to-date with our latest news, bringing you the
@@ -248,114 +258,114 @@
           Welcome to a world of heroes, villains, and everything in between...
         </p>
         <ul>
-          <button type="button">All</button>
-          <button type="button">Faeries</button>
-          <button type="button">Heroes</button>
-          <button type="button">Villains</button>
+          <li><button type="button">All</button></li>
+          <li><button type="button">Faeries</button></li>
+          <li><button type="button">Heroes</button></li>
+          <li><button type="button">Villains</button></li>
         </ul>
 
         <ul>
           <li>
             <img
-              id="heroBlock"
+              class="heroBlock"
               src="images/Faeries-Fyora.png"
               alt="A purple fairy woman, looking confident while holding a staff. Her name is Fyora."
             />
           </li>
           <li>
             <img
-              id="heroBlock"
+              class="heroBlock"
               src="images/Heros-Jake.png"
               alt="A blue Kougra (tiger) wearing adventurer gear, swinging on a vine towards you. His name is Jake."
             />
           </li>
           <li>
             <img
-              id="villainBlock"
+              class="villainBlock"
               src="images/Villains-Dr_Sloth.png"
               alt="Angry looking evil creature that's wearing a Dark Vampire-ish cloak. His name is Dr. Sloth."
             />
           </li>
           <li>
             <img
-              id="faerieBlock"
+              class="faerieBlock"
               src="images/Faeries-Naia.png"
               alt="A smiling blue faerie. She has long blond hair and scales on her blue suit. She has water motifs. Her name is Naia."
             />
           </li>
           <li>
             <img
-              id="heroBlock"
+              class="heroBlock"
               src="images/Heros_Jeran.png"
               alt="A blue wolf dressedm in gladiator armor. He's holding a sword and shield. His name is Jeran."
             />
           </li>
           <li>
             <img
-              id="heroBlock"
+              class="heroBlock"
               src="images/Heros-Hannah.png"
               alt="A yellow rabbit in a dress. She's holding a rope. Her name is Hannah."
             />
           </li>
           <li>
             <img
-              id="faerieBlock"
+              class="faerieBlock"
               src="images/Faeries-Illusen.png"
               alt="A green fearie with brown and green hair. She's smiling and holding out her hand. Her name is Illusen"
             />
           </li>
           <li>
             <img
-              id="heroBlock"
+              class="heroBlock"
               src="images/Heros_Altador.png"
               alt="A grey Lupo in Gladiator armor, but fancier than the one from before. He has a stern look to him. His name is Altador"
             />
           </li>
           <li>
             <img
-              id="villainBlock"
+              class="villainBlock"
               src="images/Villains-Captain_Scarblade.png"
               alt="A green and blue Lupo pirate double wielding swords. His clothing looks ragged and he has a scar. His name is Captain Scarblade."
             />
           </li>
           <li>
             <img
-              id="faerieBlock"
+              class="faerieBlock"
               src="images/Faeries-Mira.png"
               alt="A blue space faerie looking at a flowing light between her hands. She has tights on with a star pattern on it. Her name is Mira."
             />
           </li>
           <li>
             <img
-              id="villainBlock"
+              class="villainBlock"
               src="images/Villains-Xandra.png"
               alt="An evil-looking woman with a mysterious purple aura emitting from her. She looks angry. Her name is Xandra."
             />
           </li>
           <li>
             <img
-              id="heroBlock"
+              class="heroBlock"
               src="images/Heros_Roberta.png"
               alt="A blue Acara. She's wearing green medieval clothes, and holding a stick. Her name is Roberta."
             />
           </li>
           <li>
             <img
-              id="villainBlock"
+              class="villainBlock"
               src="images/Villains-The_Darkest_Faerie.png"
               alt="A sassy looking fearie. Her skin is light purple and her hair is dark blue. She's got both of her hands on her hips. She has two big red bat wings. Her name is The darkest Faerie."
             />
           </li>
           <li>
             <img
-              id="faerieBlock"
+              class="faerieBlock"
               src="images/Faeries-Jhudora.png"
               alt="A purple fearie. He has big fierce eyebrows and green lipstick. She's holding a green fire orb. Her name is Jhudora."
             />
           </li>
           <li>
             <img
-              id="villainBlock"
+              class="villainBlock"
               src="images/Villains-Hubrid_Nox-2.png"
               alt="A purple chia screaming at a green orb. He's wearing a sharp looking cape. His name is Hubrid Nox."
             />
